--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,15 +2,58 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Bienvenue!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
+        {{ encore_entry_link_tags('app') }}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+        
+        <style>
+
+    body {
+        background-color: #333;
+        color: #fff;
+    }
+            .alert {
+                padding:  10px;
+                color:  white;
+                text-align: center;
+            }
+
+            .alert-success {
+                background-color: green ;
+            }
+
+            .alert-error {
+                background-color: red;
+            }
+
+            .alert-info {
+                background-color: blue;
+            }
+        </style>
         {% endblock %}
 
+        
         {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
         {% endblock %}
     </head>
     <body>
+    {{ include("/layouts/partials/_nav.html.twig") }}
+    {% for type, messages in app.flashes %}
+ {% for message in messages %}
+ <div class="alert alert-{{ type }}" role="alert">
+ {{ message }}
+ </div>
+ {% endfor %}
+ {% endfor %}
+<main role="main" class="container">
         {% block body %}{% endblock %}
+        </main>
+        {{ include("/layouts/partials/_footer.html.twig") }}
     </body>
 </html>
